tests/analyze/list-fold/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Parameter count mismatch: expected 2, but found 3.
> 15 | 	let max = list.fold xs 0
                  ^^^^^^^^^^^^^^
